# rust-docs-mcp-server

./: .gitignore  .roomodes  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README 2.md  README.md  flake.nix
src/: doc_loader.rs  embeddings.rs  error.rs  main.rs  server.rs
