[package]
name = "rustdocs_mcp_server"
version = "1.3.1"
edition = "2024"

[dependencies]
rmcp = { version = "0.1.5", features = ["tower", "transport-io", "transport-sse-server", "macros", "server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
walkdir = "2.5.0"
scraper = "0.23.1"
ndarray = { version = "0.16.1", features = ["serde"] }
async-openai = "0.28.0"  # Keep for chat completion (optional)
ollama-rs = "0.2.0"      # Add Ollama client
url = "2.4"             # Add url parsing for Ollama client construction
futures = "0.3"
bincode = { version = "2.0.1", features = ["serde"] }
tiktoken-rs = "0.6.0"
cargo = { version = "0.87.1", default-features = false, features = ["vendored-openssl"] }
tempfile = "3.19.1"
anyhow = "1.0.97"
schemars = "0.8.22"
clap = { version = "4.5.34", features = ["cargo", "derive", "env"] }

# --- Platform Specific Dependencies ---

[target.'cfg(not(target_os = "windows"))'.dependencies]
xdg = { version = "2.5.2", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
dirs = "6.0.0"

# Optimize release builds for size
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true